Доработки по РР

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,8 @@
   <link rel="apple-touch-icon" href="favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -346,7 +348,7 @@
             <h3 class="sub-products__item-title">Сахарозаменитель</h3>
             <div class="sub-products__item-property">
               <span class="sub-products__text">1 упаковка (100 г)</span>
-              <span class="sub-products__text">200 ₽</span>
+              <span class="sub-products__text sub-products__text--second">200 ₽</span>
             </div>
             <a class="sub-products__button button" href="404.html">
               Заказать
@@ -356,7 +358,7 @@
             <h3 class="sub-products__item-title">Питьевая вода</h3>
             <div class="sub-products__item-property">
               <span class="sub-products__text">5 литров</span>
-              <span class="sub-products__text">50 ₽</span>
+              <span class="sub-products__text sub-products__text--second">50 ₽</span>
             </div>
             <a class="sub-products__button button" href="404.html">
               Заказать
@@ -366,7 +368,7 @@
             <h3 class="sub-products__item-title">Молоко</h3>
             <div class="sub-products__item-property">
               <span class="sub-products__text">1 литр</span>
-              <span class="sub-products__text">100 ₽</span>
+              <span class="sub-products__text sub-products__text--second">100 ₽</span>
             </div>
             <a class="sub-products__button button" href="404.html">
               Заказать
@@ -376,7 +378,7 @@
             <h3 class="sub-products__item-title">Витамины</h3>
             <div class="sub-products__item-property">
               <span class="sub-products__text">1 упаковка (30 г)</span>
-              <span class="sub-products__text">300 ₽</span>
+              <span class="sub-products__text sub-products__text--second">300 ₽</span>
             </div>
             <a class="sub-products__button button" href="404.html">
               Заказать
