--- a/source/404.html
+++ b/source/404.html
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="CatEnergy">
   <title>404</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preload" href="styles/styles.css" as="style" crossorigin="anonymous">
   <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -60,7 +62,7 @@
   </header>
   <main class="main-container wrapper">
     <h1>404</h1>
-    <p>Страница не найдена. <a href="/">Перейти на главную</a>.</p>
+    <p>Страница не найдена. <a href="/index.html">Перейти на главную</a>.</p>
   </main>
   <footer class="main-footer ">
     <section class="social">
@@ -69,22 +71,22 @@
       </h2>
       <div class="social__content wrapper">
         <a class="main-footer__logo" href="#">
-          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" loading="lazy" width="128" height="24">
         </a>
         <ul class="main-footer__list">
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy" aria-label="Ссылка VK">
               <span class="visually-hidden">Мы в контакте</span>
             </a>
           </li>
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy" aria-label="Ссылка Youtube">
 
               <span class="visually-hidden">Мы в youtube</span>
             </a>
           </li>
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy" aria-label="Ссылка Telegram">
               <span class="visually-hidden">Мы в telegram</span>
             </a>
           </li>
