--- a/source/index.html
+++ b/source/index.html
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="CatEnergy">
   <title>CatEnergy - функциональное питание для котов</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preload" href="styles/styles.css" as="style" crossorigin="anonymous">
   <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -31,7 +33,7 @@
               <img class="logo__logo-image logo__logo-image--text" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
-          <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
+          <button class="main-nav__toggle main-nav__toggle--nojs" type="button" title="Открыть меню">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
@@ -62,9 +64,13 @@
           <h1 class="promo__main-header">Функциональное питание для котов</h1>
           <p class="promo__slogan">Занялся собой? Займись котом!</p>
           <picture class="promo__picture">
+            <source type="image/webp" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.webp 1x, images/index-can-desktop@2x.webp 2x" width="552" height="499">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.webp 1x, images/index-can-tablet@2x.webp 2x" width="709" height="609">
+            <source type="image/webp" srcset="images/index-can-mobile@1x.webp 1x, images/index-can-mobile@2x.webp 2x" width="280" height="270">
+
             <source width="552" height="499" type="image/png" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
             <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
-            <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
+            <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" loading="lazy" width="280" height="270">
           </picture>
           <a class="promo__button button" href="/404.html">
             Подобрать программу
@@ -83,18 +89,18 @@
         </h2>
         <ul class="programs__list">
           <li class="programs__item">
-            <h3 class="programs__title">
+            <h2 class="programs__title">
               Похудение
-            </h3>
+            </h2>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="programs__link" href="catalog.html">
               Каталог SLIM
             </a>
           </li>
           <li class="programs__item">
-            <h3 class="programs__title programs__title--second">
+            <h2 class="programs__title programs__title--second">
               Набор массы
-            </h3>
+            </h2>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="programs__link" href="catalog.html">
               Каталог PRO
@@ -145,14 +151,20 @@
         </div>
         <div class="cat-slider">
           <picture class="cat-slider__image-item cat-slider__image-item--first">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/state-before-tablet@1x.webp 1x, images/state-before-tablet@2x.webp 2x" width="560" height="512">
+            <source type="image/webp" srcset="images/state-before-mobile@1x.webp 1x, images/state-before-mobile@2x.webp 2x" width="280" height="256">
+
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-before-tablet@1x.png 1x, images/state-before-tablet@2x.png 2x">
-            <img class="cat-slider__image" src="images/state-before-mobile@1x.png" srcset="images/state-before-mobile@2x.png 2x" alt="Фото котика на функциональном питании" width="280" height="256">
+            <img class="cat-slider__image" src="images/state-before-mobile@1x.png" srcset="images/state-before-mobile@2x.png 2x" alt="Фото котика на функциональном питании" loading="lazy" width="280" height="256">
           </picture>
           <picture class="cat-slider__image-item cat-slider__image-item--second">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/state-after-tablet@1x.webp 1x, images/state-after-tablet@2x.webp 2x" width="560" height="512">
+            <source type="image/webp" srcset="images/state-after-mobile@1x.webp 1x, images/state-after-mobile@2x.webp 2x" width="280" height="256">
+
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-after-tablet@1x.png 1x, images/state-after-tablet@2x.png 2x">
-            <img class="cat-slider__image" src="images/state-after-mobile@1x.png" srcset="images/state-after-mobile@2x.png 2x" alt="Фото котика до функционального питания" width="280" height="256">
+            <img class="cat-slider__image" src="images/state-after-mobile@1x.png" srcset="images/state-after-mobile@2x.png 2x" alt="Фото котика до функционального питания" loading="lazy" width="280" height="256">
           </picture>
-          <button class="cat-slider__control" type="button">
+          <button class="cat-slider__control" type="button" title="Ползунок слайдера">
             <span class="visually-hidden">Передвинуть ползунок слайдера</span>
           </button>
         </div>
@@ -174,9 +186,13 @@
       </div>
       <iframe class="contacts__map contacts__map--iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257198464!2d30.320472477840497!3d59.9387191620931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1737450356568!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy" title="Офис компании по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
       <picture class="contacts__map contacts__map--img">
+        <source type="image/webp" media="(min-width: 1280px)" srcset="images/location-desktop@1x.webp 1x, images/location-desktop@2x.webp 2x" width="1280" height="400">
+        <source type="image/webp" media="(min-width: 768px)" srcset="images/location-tablet@1x.webp 1x, images/location-tablet@2x.webp 2x" width="768" height="400">
+        <source type="image/webp" srcset="images/location-mobile@1x.webp 1x, images/location-mobile@2x.webp 2x" width="320" height="362">
+
         <source width="1280" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
-        <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
+        <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" loading="lazy" width="320" height="362">
       </picture>
     </section>
     <section class=" social">
@@ -185,22 +201,21 @@
       </h2>
       <div class="social__content wrapper">
         <a class="main-footer__logo" href="#">
-          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" loading="lazy" width="128" height="24">
         </a>
         <ul class="main-footer__list">
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy" aria-label="Ссылка VK">
               <span class="visually-hidden">Мы в контакте</span>
             </a>
           </li>
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
-
+            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy" aria-label="Ссылка Youtube">
               <span class="visually-hidden">Мы в youtube</span>
             </a>
           </li>
           <li class="main-footer__item">
-            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy" aria-label="Ссылка Telegram">
               <span class="visually-hidden">Мы в telegram</span>
             </a>
           </li>
